--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
+<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
+<!--[if IE 8]><html class="preIE9"><![endif]-->
+<!--[if gte IE 9]><!--><html><!--<![endif]-->
+ <head>
+  <meta charset="UTF-8">
+  <title>title</title>
+  <meta name="author" content="Kyle Brost">
+  <meta name="description" content="Personal website for Kyle Brost">
+  <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
+ </head>
+ <body>
+  
+ </body>
+</html>
