--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
  <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title>build1</title>
   <meta name="author" content="Kyle Brost">
   <meta name="description" content="Personal website for Kyle Brost">
   <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
