added nav bar, soon to edit

--- a/index.html
+++ b/index.html
@@ -2,17 +2,52 @@
 <!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
 <!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
 <!--[if IE 8]><html class="preIE9"><![endif]-->
-<!--[if gte IE 9]><!--><html><!--<![endif]-->
+<!--[if gte IE 9]><!-->
+<html lang="en"><!--<![endif]-->
  <head>
+     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <meta charset="UTF-8">
-  <title>build1</title>
+  <title>build2</title>
   <meta name="author" content="Kyle Brost">
   <meta name="description" content="Personal website for Kyle Brost">
   <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-   scalable=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
  </head>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+ <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+            <span class="sr-only">Toggle navigation</span>
+        </button>
+        <a class="navbar-brand" href="#">KB</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+            <ul class="nav navbar-nav navbar-right">            
+        <li><a href="http://github.com/broskj"><img height="24" width="24" src="img/applogo512.png"></a></li>
+	<li><a href="http://linkedin.com/in/broskj"><img height="24" width="24" src="img/isis.jpg"></a></li>
+            </ul>
+          </div>
+      </div>
+  </div>
+</nav>
  <body>
-  
+     
  </body>
 </html>
