Added navbar icons for external links

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         <li><a href="#projects">Projects</a></li>
       </ul>
             <ul class="nav navbar-nav navbar-right">            
-        <li><a href="http://github.com/broskj"><img height="24" width="24" src="img/applogo512.png"></a></li>
-	<li><a href="http://linkedin.com/in/broskj"><img height="24" width="24" src="img/isis.jpg"></a></li>
+        <li><a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a></li>
+	<li><a href="http://linkedin.com/in/broskj"><img height="18" width="18
+        " src="img/linkedin.png"></a></li>
             </ul>
           </div>
       </div>
