--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!-->
-<html lang="en"><!--<![endif]-->
- <head>
-     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <meta charset="UTF-8">
-  <title>build2</title>
-  <meta name="author" content="Kyle Brost">
-  <meta name="description" content="Personal website for Kyle Brost">
-  <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-   scalable=no">
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
- </head>
-    <!-- Latest compiled and minified CSS -->
+<html lang="en">
+<!--<![endif]-->
+
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <meta charset="UTF-8">
+    <title>build2</title>
+    <meta name="author" content="Kyle Brost">
+    <meta name="description" content="Personal website for Kyle Brost">
+    <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-   scalable=no">
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
+    <script src="script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
+</head>
+<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 <!-- Optional theme -->
@@ -23,32 +27,38 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
- <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-            <span class="sr-only">Toggle navigation</span>
-        </button>
-        <a class="navbar-brand" href="#">KB</a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                <span class="sr-only">Toggle navigation</span>
+            </button>
+            <a class="navbar-brand">KB</a>
+        </div>
         <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#projects">Projects</a></li>
-      </ul>
-            <ul class="nav navbar-nav navbar-right">            
-        <li><a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a></li>
-	<li><a href="http://linkedin.com/in/broskj"><img height="18" width="18
-        " src="img/linkedin.png"></a></li>
-            </ul>
-          </div>
-      </div>
-  </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a>
+                    </li>
+                    <li>
+                        <a href="http://linkedin.com/in/broskj"><img height="18" width="18
+        " src="img/linkedin.png"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </nav>
- <body>
-     
- </body>
+
+<body>
+
+</body>
+
 </html>
