--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <!--<![endif]-->
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
-    <title>build2</title>
+    <title>build3</title>
     <meta name="author" content="Kyle Brost">
     <meta name="description" content="Personal website for Kyle Brost">
     <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
@@ -22,11 +22,7 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -38,10 +34,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a id="home" href="#">HOME</a></li>
+                    <li><a id="about" href="#about">ABOUT</a></li>
+                    <li><a id="work" href="#work">WORK</a></li>
+                    <li><a id="projects" href="#projects">PROJECTS</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -56,6 +52,59 @@
         </div>
     </div>
 </nav>
+<div id="home">
+    <div class="container">
+        <h1 class="landing-title">KYLE BROST</h1>
+        <!-- placeholder image
+        <img src="img/applogo512.png" class="img-main" height="256" width="256" alt="img-main">
+        -->
+    </div>
+</div>
+
+<div id="about" class="container">
+    <div class="page-header">
+        <h1>ABOUT</h1>
+    </div>
+    <p>
+        My name is Kyle Brost, I'm a senior studying Computer Science student at the Univerity of Florida.
+        <br/> more stuff
+        <br/>
+    </p>
+</div>
+
+<div id="work" class="container">
+    <div class="page-header">
+        <h1>WORK</h1>
+    </div>
+    <ul class="list-group">
+        <li class="list-group-item"><b>Floor Staff, Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge">May 2013 - Present</span></li>
+        <li class="list-group-item"><b>Usher, </b><i>Regal Entertainment Group</i><span class="badge">Nov 2012 - Nov 2013</span></li>
+        <li class="list-group-item"><b>Tax Preparer, </b><i>Real$ense Jax</i><span class="badge">Feb 2012 - Apr 2012</span></li>
+    </ul>
+</div>
+
+<div id="projects" class="container">
+    <div class="page-header">
+        <h1>PROJECTS</h1>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="img/applogo512.png" class="img-responsive" height="256px" width="256px">
+            <h3><a href="https://play.google.com/store/apps/details?id=com.jacksonvillecomedy.broskj.jaxcomedy&hl=en" target="_blank">JaxComedy</a></h3>
+            <p>jax comedy info</p>
+        </div>
+        <div class="col-md-4">
+            <img src="img/battleship.png" class="img-responsive" height="256px" width="256px">
+            <h3><a href="http://github.com/broskj/BattleShip" target="_blank">BattleShip</a></h3>
+            <p>battleship info</p>
+        </div>
+        <div class="col-md-4">
+            <img src="img/mygymbuddy512.png" class="img-responsiveness" height="256px" width="256px">
+            <h3><a href="http://github.com/broskj/MyGumBuddy" target="_blank">MyGymBuddy</a></h3>
+            <p>mygymbuddy info</p>
+        </div>
+    </div>
+</div>
 
 <body>
 
