--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
-    <title>build3</title>
+    <title>build4</title>
     <meta name="author" content="Kyle Brost">
     <meta name="description" content="Personal website for Kyle Brost">
     <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-   scalable=no">
-    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="img/icon.png" type="image/vnd.microsoft.icon">
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
     <script src="script.js" type="text/javascript"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
