Resubmitting last commit. Added icon on navbar for email.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
-    <title>build4</title>
+    <title>build5</title>
     <meta name="author" content="Kyle Brost">
     <meta name="description" content="Personal website for Kyle Brost">
     <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
@@ -44,8 +44,10 @@
                         <a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a>
                     </li>
                     <li>
-                        <a href="http://linkedin.com/in/broskj"><img height="18" width="18
-        " src="img/linkedin.png"></a>
+                        <a href="http://linkedin.com/in/broskj"><img height="18" width="18" src="img/linkedin.png"></a>
+                    </li>
+                    <li>
+                        <a href="mailto:kjbrost@gmail.com"><img height="18" width="18" src="img/email.png"></a>
                     </li>
                 </ul>
             </div>
