--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
     <script src="script.js" type="text/javascript"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-                <span class="sr-only">Toggle navigation</span>
-            </button>
-            <a class="navbar-brand">KB</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">KB</a>
+            </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a id="home" href="#">HOME</a></li>
@@ -39,77 +41,79 @@
                     <li><a id="work" href="#work">WORK</a></li>
                     <li><a id="projects" href="#projects">PROJECTS</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a>
-                    </li>
-                    <li>
-                        <a href="http://linkedin.com/in/broskj"><img height="18" width="18" src="img/linkedin.png"></a>
-                    </li>
-                    <li>
-                        <a href="mailto:kjbrost@gmail.com"><img height="18" width="18" src="img/email.png"></a>
-                    </li>
+                <ul>
+
+                    <div class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a>
+                        </li>
+                        <li>
+                            <a href="http://linkedin.com/in/broskj"><img height="18" width="18" src="img/linkedin.png"></a>
+                        </li>
+                        <li>
+                            <a href="mailto:kjbrost@gmail.com"><img height="18" width="18" src="img/email.png"></a>
+                        </li>
                 </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </nav>
+
+    <div id="home">
+        <div class="container">
+            <h1 class="landing-title">KYLE BROST</h1>
+            <!-- placeholder image
+        <img src="img/applogo512.png" class="img-main" height="256" width="256" alt="img-main">
+        -->
+        </div>
+    </div>
+
+    <div id="about" class="container">
+        <div class="page-header">
+            <h1>ABOUT</h1>
+        </div>
+        <p>
+            My name is Kyle Brost, I'm a senior studying Computer Science student at the Univerity of Florida.
+            <br/> more stuff
+            <br/> even more stuff
+            <br/>
+        </p>
+    </div>
+
+    <div id="work" class="container">
+        <div class="page-header">
+            <h1>WORK</h1>
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item"><b>Floor Staff, Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge">May 2013 - Present</span></li>
+            <li class="list-group-item"><b>Usher, </b><i>Regal Entertainment Group</i><span class="badge">Nov 2012 - Nov 2013</span></li>
+            <li class="list-group-item"><b>Tax Preparer, </b><i>Real$ense Jax</i><span class="badge">Feb 2012 - Apr 2012</span></li>
+        </ul>
+    </div>
+
+    <div id="projects" class="container">
+        <div class="page-header">
+            <h1>PROJECTS</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/applogo512.png" class="img-responsive" height="256px" width="256px">
+                <h3><a href="https://play.google.com/store/apps/details?id=com.jacksonvillecomedy.broskj.jaxcomedy&hl=en" target="_blank">JaxComedy</a></h3>
+                <p>jax comedy info</p>
+            </div>
+            <div class="col-md-4">
+                <img src="img/battleship.png" class="img-responsive" height="256px" width="256px">
+                <h3><a href="http://github.com/broskj/BattleShip" target="_blank">BattleShip</a></h3>
+                <p>battleship info</p>
+            </div>
+            <div class="col-md-4">
+                <img src="img/mygymbuddy512.png" class="img-responsive" height="256px" width="256px">
+                <h3><a href="http://github.com/broskj/MyGymBuddy" target="_blank">MyGymBuddy</a></h3>
+                <p>mygymbuddy info</p>
             </div>
         </div>
     </div>
-</nav>
-<div id="home">
-    <div class="container">
-        <h1 class="landing-title">KYLE BROST</h1>
-        <!-- placeholder image
-        <img src="img/applogo512.png" class="img-main" height="256" width="256" alt="img-main">
-        -->
-    </div>
-</div>
-
-<div id="about" class="container">
-    <div class="page-header">
-        <h1>ABOUT</h1>
-    </div>
-    <p>
-        My name is Kyle Brost, I'm a senior studying Computer Science student at the Univerity of Florida.
-        <br/> more stuff
-        <br/>
-    </p>
-</div>
-
-<div id="work" class="container">
-    <div class="page-header">
-        <h1>WORK</h1>
-    </div>
-    <ul class="list-group">
-        <li class="list-group-item"><b>Floor Staff, Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge">May 2013 - Present</span></li>
-        <li class="list-group-item"><b>Usher, </b><i>Regal Entertainment Group</i><span class="badge">Nov 2012 - Nov 2013</span></li>
-        <li class="list-group-item"><b>Tax Preparer, </b><i>Real$ense Jax</i><span class="badge">Feb 2012 - Apr 2012</span></li>
-    </ul>
-</div>
-
-<div id="projects" class="container">
-    <div class="page-header">
-        <h1>PROJECTS</h1>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <img src="img/applogo512.png" class="img-responsive" height="256px" width="256px">
-            <h3><a href="https://play.google.com/store/apps/details?id=com.jacksonvillecomedy.broskj.jaxcomedy&hl=en" target="_blank">JaxComedy</a></h3>
-            <p>jax comedy info</p>
-        </div>
-        <div class="col-md-4">
-            <img src="img/battleship.png" class="img-responsive" height="256px" width="256px">
-            <h3><a href="http://github.com/broskj/BattleShip" target="_blank">BattleShip</a></h3>
-            <p>battleship info</p>
-        </div>
-        <div class="col-md-4">
-            <img src="img/mygymbuddy512.png" class="img-responsiveness" height="256px" width="256px">
-            <h3><a href="http://github.com/broskj/MyGumBuddy" target="_blank">MyGymBuddy</a></h3>
-            <p>mygymbuddy info</p>
-        </div>
-    </div>
-</div>
-
-<body>
-
 </body>
 
 </html>
