--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
-    <title>build5</title>
+    <title>build6</title>
     <meta name="author" content="Kyle Brost">
     <meta name="description" content="Personal website for Kyle Brost">
     <meta name="keywords" content="Kyle, Brost, kjbrost, broskj">
@@ -17,44 +17,42 @@
     <link rel="shortcut icon" href="img/icon.png" type="image/vnd.microsoft.icon">
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
     <script src="script.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" data-toggle="collapse" data-target=".nav-collapse">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">KB</a>
+                <a class="navbar-brand">KB</a>
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
+            <div id="myNavbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#work">WORK</a></li>
                     <li><a href="#projects">PROJECTS</a></li>
                 </ul>
-                <ul>
-
-                    <div class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="http://github.com/broskj"><img height="18" width="18" src="img/github.png"></a>
-                        </li>
-                        <li>
-                            <a href="http://linkedin.com/in/broskj"><img height="18" width="18" src="img/linkedin.png"></a>
-                        </li>
-                        <li>
-                            <a href="mailto:kjbrost@gmail.com"><img height="18" width="18" src="img/email.png"></a>
-                        </li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="http://github.com/broskj"><img class="right-nav" height="18" width="18" src="img/github.png">GITHUB</a>
+                    </li>
+                    <li>
+                        <a class="right-nav" href="http://linkedin.com/in/broskj"><img class="right-nav" height="18" width="18" src="img/linkedin.png">LINKEDIN</a>
+                    </li>
+                    <li>
+                        <a class="right-nav" href="mailto:kjbrost@gmail.com"><img class="right-nav" height="18" width="18" src="img/email.png">CONTACT</a>
+                    </li>
                 </ul>
-                </div>
                 <!--/.nav-collapse -->
             </div>
         </div>
@@ -80,6 +78,9 @@
 
     <div id="work" class="container">
         <div class="page-header">
+
+
+            .list-group-item { }
             <h1>WORK</h1>
         </div>
         <ul class="list-group">
