--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" data-toggle="collapse" data-target=".nav-collapse">
+    <nav class="navbar navbar-default navbar-fixed-top" data-toggle="collapse" data-target="navbar-collapse">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -37,20 +37,20 @@
             </div>
             <div id="myNavbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#work">WORK</a></li>
-                    <li><a href="#projects">PROJECTS</a></li>
+                    <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse">HOME</a></li>
+                    <li><a href="#about" data-toggle="collapse" data-target=".navbar-collapse">ABOUT</a></li>
+                    <li><a href="#work" data-toggle="collapse" data-target=".navbar-collapse">WORK</a></li>
+                    <li><a href="#projects" data-toggle="collapse" data-target=".navbar-collapse">PROJECTS</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://github.com/broskj"><img class="right-nav" height="18" width="18" src="img/github.png">GITHUB</a>
+                        <a href="http://github.com/broskj" data-toggle="collapse" data-target=".navbar-collapse"><img class="right-nav" height="18" width="18" src="img/github.png">GITHUB</a>
                     </li>
                     <li>
-                        <a class="right-nav" href="http://linkedin.com/in/broskj"><img class="right-nav" height="18" width="18" src="img/linkedin.png">LINKEDIN</a>
+                        <a class="right-nav" href="http://linkedin.com/in/broskj" data-toggle="collapse" data-target=".navbar-collapse"><img class="right-nav" height="18" width="18" src="img/linkedin.png">LINKEDIN</a>
                     </li>
                     <li>
-                        <a class="right-nav" href="mailto:kjbrost@gmail.com"><img class="right-nav" height="18" width="18" src="img/email.png">CONTACT</a>
+                        <a class="right-nav" href="mailto:kjbrost@gmail.com" data-toggle="collapse" data-target=".navbar-collapse"><img class="right-nav" height="18" width="18" src="img/email.png">CONTACT</a>
                     </li>
                 </ul>
             </div>
