Edited text and added background color to make text readable while background image loads

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h1>WORK</h1>
         </div>
         <ul class="list-group">
-            <li class="list-group-item"><b>Floor Staff, Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge">May 2013 - Present</span></li>
+            <li class="list-group-item"><b>Floor Staff; Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge">May 2013 - Present</span></li>
             <li class="list-group-item"><b>Usher, </b><i>Regal Entertainment Group</i><span class="badge">Nov 2012 - Nov 2013</span></li>
             <li class="list-group-item"><b>Tax Preparer, </b><i>Real$ense Jax</i><span class="badge">Feb 2012 - Apr 2012</span></li>
         </ul>
@@ -102,7 +102,7 @@
                 <img src="img/battleship.png" class="img-responsive" height="256px" width="256px">
                 <h3><a href="http://github.com/broskj/BattleShip" target="_blank">BattleShip</a></h3>
                 <p>I was a part of a group project team that decided to recreate the board game BattleShip in command line using C++. The game uses object-orientation, multi-dimensional arrays, pointers, stacks, file reading and string parsing, and other general C++ knowledge. The program offers a guided tutorial, and can be played against either another player or an AI opponent with three difficulties.</p>
-                <p>My contribution included creating different ship placement functions (place ships at specified coordinates, place them in predefined locations for bug testing, and place them randomly on the board), validation for ship placements, sunken ship confirmation, an automated tutorial, and parts of the Player and Computer classes and the computer AI, which utilized stacks to simulate strategic play.</p>
+                <p>My contribution included creating different ship placement functions (place ships at specified coordinates, place them in predefined locations for bug testing, or place them randomly on the board), validation for ship placements, sunken ship confirmation, a guided tutorial, and parts of class definitions and opponent AI, which utilized stacks to simulate strategic play.</p>
                 <p>The game's source code is available to download through <a href="https://github.com/broskj/BattleShip">github</a> (it may need to be run with 'g++ -std=c++0x' on UNIX systems).</p>
             </div>
             <div class="col-md-4">
