Added test page

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <h1>WORK</h1>
         </div>
         <ul class="list-group">
-            <li class="list-group-item"><b>Floor Staff; Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge">May 2013 - Present</span></li>
-            <li class="list-group-item"><b>Usher, </b><i>Regal Entertainment Group</i><span class="badge">Nov 2012 - Nov 2013</span></li>
-            <li class="list-group-item"><b>Tax Preparer, </b><i>Real$ense Jax</i><span class="badge">Feb 2012 - Apr 2012</span></li>
+            <li class="list-group-item clearfix"><b>Floor Staff; Android App Developer, </b><i>Comedy Club of Jacksonville</i><span class="badge ">May 2013 - Present</span></li>
+            <li class="list-group-item clearfix"><b>Usher, </b><i>Regal Entertainment Group</i><span class="badge">Nov 2012 - Nov 2013</span></li>
+            <li class="list-group-item clearfix"><b>Tax Preparer, </b><i>Real$ense Jax</i><span class="badge">Feb 2012 - Apr 2012</span></li>
         </ul>
     </div>
 
